--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+#self define
+p2p_files_server/files_share/
+p2p_files_server_other/
+
 # C extensions
 *.so
 
